--- a/style.css
+++ b/style.css
@@ -87,11 +87,7 @@ hr {
 }
 
 #btn-action{
-  box-shadow: 5px 5px 8px 0px #111;
-  font-weight: 900;
-  opacity:0.9;
-  color: white;
-  font-size: 0.9;
+  box-shadow: 1px 1px 3px 0px #aaa;
 }
 #btn-action:hover{
   box-shadow: none;
@@ -184,7 +180,7 @@ hr {
   margin: 10px 0px;
   border-radius: 5px;
   opacity:0.9;
-  box-shadow: 5px 5px 8px 0px #111;
+  box-shadow: 1px 1px 3px 0px #aaa;
 }
 
 #btn-submit-contact {
