--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ hr {
   background: #ccc;
 }
 
+.permanent-marker-subtitle{
+  font-size:0.7em;
+  width: 70%;
+  font-family:'Permanent Marker', cursive;
+}
+
 #btn-action{
   box-shadow: 1px 1px 3px 0px #aaa;
 }
